# CS_554

./: README.md  proj_2_grad_exercise.tar
Project_1/: codegen.py  compilation_test.py  compiler.py  dot_graphiic.py  example-assign_and_if_else.while  generator.py  parser.py  pda.py  run_performance_test.bat  scanner.py  tree.dot  trees.py
Project_1/tests/: test_parser.py  test_scanner.py
Project_2/: README.md  c_code_test.c  c_codegen.py  c_compiler.py  cfg.py  codegen.py  codegen2.py  codegen_ast_to_c.py  compiler.py  compiler_ast_to_c.py  optimizer.py  parser.py  scanner.py  test_cfg.py  test_factorial_cfg.dot  test_if_cfg.dot  test_sequence_cfg.dot  test_simple_cfg.dot  test_while_cfg.dot  trees_old.py
Project_2/tests/: test_parser.py
Project_2_grad_exercise/: c_codegen.py  c_compiler.py  c_gen_from_ast  c_gen_from_ast.c  c_gen_from_cfg  c_gen_from_cfg.c  codegen.py
Qing/: CMakeLists.txt  ReadMe.md
Qing/include/: instruction.hpp  memory.hpp  um.hpp
Qing/src/: instruction.cpp  main.cpp  memory.cpp  um.cpp
Team_Warmup_Benchmarking/: create_files.c  factorial_iterative.py  loop_alloc_dealloc.c  loop_factorials.c
Team_Warmup_Factorial/: README.md
Team_Warmup_Optimizing_Emulator/: README.md  rpi_emulator  rpi_emulator.cpp  rpi_emulator_arrays.cpp
Written_HW_2/: first_sets.py  follow_sets.py  grammar.py  grammar_01.py  grammar_02.py  grammar_03.py  grammar_04.py  grammar_05.py  grammar_06.py  grammar_07.py  grammar_08.py  grammar_analysis.py  nullable.py
benchmarks/: remove_files.c  write_to_files.c
emulator/: emulator_gould.cpp
(+182 files in other folders)
